feat: update mobile navigation to link to People instead of Articles. Closes #22

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -419,10 +419,10 @@
       <div class="mobile-nav-label">Home</div>
     </a>
 
-    <a mat-button class="mobile-nav-button" [routerLink]="['/articles']" routerLinkActive="active-link"
+    <a mat-button class="mobile-nav-button" [routerLink]="['/people']" routerLinkActive="active-link"
       [routerLinkActiveOptions]="{exact: true}">
-      <mat-icon>article</mat-icon>
-      <div class="mobile-nav-label">Articles</div>
+      <mat-icon>people</mat-icon>
+      <div class="mobile-nav-label">People</div>
     </a>
 
     <!-- FAB button in the middle with circular cut-out -->
