fix: Disable drag-and-drop for columns on mobile view

--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -174,7 +174,7 @@
             class="column-unit"
             cdkDrag
             [cdkDragData]="i"
-            [cdkDragDisabled]="columns().length <= 1"
+            [cdkDragDisabled]="isMobileView() || columns().length <= 1"
             [class.visible]="
               !isMobileView() || (isMobileView() && i === visibleColumnIndex())
             "
