feat: Integrate user profile component into article and playlist event displays with new 'tiny' view mode

--- a/src/app/components/event-types/article-event.component.html
+++ b/src/app/components/event-types/article-event.component.html
@@ -7,7 +7,12 @@
 
 <article class="article-container">
   @if (title()) {
-  <h3 class="article-title">{{ title() }}</h3>
+  <h3 class="article-title">
+    
+      <app-user-profile class="user-profile-name-right" [hostWidthAuto]="true" [pubkey]="event().pubkey"
+    view="tiny"></app-user-profile>
+    
+    {{ title() }}</h3>
   }
 
   @if (authorName() || publishedAt()) {
