--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1046,3 +1046,8 @@ app-media-queue .media-list mat-list {
     background: rgba(0, 0, 0, 0.95) !important;
   }
 }
+
+
+.user-profile-name-right {
+  float: right;
+}
