--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -27,6 +27,7 @@
     }
 
     <!-- Avatar section - single image element -->
+    @if (view() !== 'name' && view() !== 'tiny') {
     <a [routerLink]="['/p', npubValue()]" class="user-profile-avatar" [class.has-custom-tooltip]="
         view() === 'large' || view() === 'medium' || view() === 'small'
       " [attr.data-tooltip]="getTooltipContent()" (touchstart)="showTooltipOnTouch($event)">
@@ -52,86 +53,151 @@
       </mat-icon>
       }
     </a>
+    }
     <!-- Content section with conditional rendering based on view -->
 
     @if (
-      view() !== 'large' &&
-      view() !== 'medium' &&
-      view() !== 'small' &&
-      view() !== 'icon' &&
-      view() !== 'name'
+    view() !== 'large' &&
+    view() !== 'medium' &&
+    view() !== 'small' &&
+    view() !== 'icon' &&
+    view() !== 'tiny' &&
+    view() !== 'name'
     ) {
-      <div class="user-profile-content">
-        <!-- Name section -->
-        <a [routerLink]="['/p', npubValue()]" class="user-profile-name">
-          @if (isLoading()) {
-            Loading...
-          } @else if (profile() && !profile().isEmpty && profile().data) {
-            @if (profile().data.display_name) {
-              {{ profile().data.display_name }}
-            } @else if (profile().data.name) {
-              {{ profile().data.name }}
-            } @else {
-              [No name]
-            }
-          } @else {
-            [Not found]
-          }
-        </a>
-
-        <!-- NPUB section - only shown in appropriate views -->
-        @if (view() === 'list' || view() === 'details') {
-          <div class="user-profile-npub">{{ aliasOrNpub() }}</div>
+    <div class="user-profile-content">
+      <!-- Name section -->
+      <a [routerLink]="['/p', npubValue()]" class="user-profile-name">
+        @if (isLoading()) {
+        Loading...
+        } @else if (profile() && !profile().isEmpty && profile().data) {
+        @if (profile().data.display_name) {
+        {{ profile().data.display_name }}
+        } @else if (profile().data.name) {
+        {{ profile().data.name }}
+        } @else {
+        [No name]
         }
-
-        <!-- About section - only shown in details view -->
-        @if (
-          view() === 'details' &&
-          profile() &&
-          profile().data &&
-          profile().data.about
-        ) {
-          <div class="user-profile-about">{{ profile().data.about }}</div>
+        } @else {
+        [Not found]
         }
+      </a>
 
-        @if (view() === 'details' && profile() && profile().data) {
-          @if (profile().data.nip05) {
-            <div class="user-profile-details">
-              NIP-05: {{ profile().data.nip05 }}
-            </div>
-          }
-          @if (profile().data.lud16) {
-            <div class="user-profile-details">
-              LUD16: {{ profile().data.lud16 }}
-            </div>
-          }
-          @if (profile().data.website) {
-            <div class="user-profile-details">
-              Website: {{ profile().data.website }}
-            </div>
-          }
-        }
+      <!-- NPUB section - only shown in appropriate views -->
+      @if (view() === 'list' || view() === 'details') {
+      <div class="user-profile-npub">{{ aliasOrNpub() }}</div>
+      }
+
+      <!-- About section - only shown in details view -->
+      @if (
+      view() === 'details' &&
+      profile() &&
+      profile().data &&
+      profile().data.about
+      ) {
+      <div class="user-profile-about">{{ profile().data.about }}</div>
+      }
+
+      @if (view() === 'details' && profile() && profile().data) {
+      @if (profile().data.nip05) {
+      <div class="user-profile-details">
+        NIP-05: {{ profile().data.nip05 }}
       </div>
+      }
+      @if (profile().data.lud16) {
+      <div class="user-profile-details">
+        LUD16: {{ profile().data.lud16 }}
+      </div>
+      }
+      @if (profile().data.website) {
+      <div class="user-profile-details">
+        Website: {{ profile().data.website }}
+      </div>
+      }
+      }
+    </div>
     }
 
     @if (view() === 'name') {
-      <div class="user-profile-content">
-        <span class="user-profile-name">
+    <div class="user-profile-content name-view">
+      <a [routerLink]="['/p', npubValue()]" class="user-profile-avatar">
+
+        <div class="user-profile-avatar name-avatar">
           @if (isLoading()) {
-            Loading...
-          } @else if (profile() && !profile().isEmpty && profile().data) {
-            @if (profile().data.display_name) {
-              {{ profile().data.display_name }}
-            } @else if (profile().data.name) {
-              {{ profile().data.name }}
-            } @else {
-              {{ npubValue() }}
-            }
+          <mat-spinner [diameter]="24" color="primary"></mat-spinner>
+          } @else if (profile()?.data?.picture && !imageLoadError()) {
+          @if (settingsService.settings().imageCacheEnabled) {
+          <img [src]="'https://proxy.eu.nostria.app/api/ImageOptimizeProxy?w=24&h=24&url=' + profile().data.picture"
+            (error)="onImageLoadError()" alt="User Avatar" class="user-avatar" />
           } @else {
-            {{ npubValue() }}
+          <img [src]="profile().data.picture" (error)="onImageLoadError()" alt="User Avatar" class="user-avatar" />
+          }
+          } @else {
+          <mat-icon [ngClass]="[
+                  'default-user-avatar',
+                  isProfileNotFound() ? 'not-found-avatar' : '',
+                  imageLoadError() ? 'error-avatar' : '',
+                ]" [style.font-size]="'24px'" [style.height]="'24px'" [style.width]="'24px'">
+            {{ isProfileNotFound() ? 'no_accounts' : 'account_circle' }}
+          </mat-icon>
+          }
+        </div>
+        <span class="user-profile-name name-label">
+          @if (isLoading()) {
+          Loading...
+          } @else if (profile() && !profile().isEmpty && profile().data) {
+          @if (profile().data.display_name) {
+          {{ profile().data.display_name }}
+          } @else if (profile().data.name) {
+          {{ profile().data.name }}
+          } @else {
+          {{ npubValue() }}
+          }
+          } @else {
+          {{ npubValue() }}
           }
         </span>
+      </a>
+    </div>
+    }
+
+    @if (view() === 'tiny') {
+    <a [routerLink]="['/p', npubValue()]" class="user-profile-content tiny-view">
+      <div class="user-profile-avatar name-avatar">
+        @if (isLoading()) {
+        <mat-spinner [diameter]="24" color="primary"></mat-spinner>
+        } @else if (profile()?.data?.picture && !imageLoadError()) {
+        @if (settingsService.settings().imageCacheEnabled) {
+        <img [src]="'https://proxy.eu.nostria.app/api/ImageOptimizeProxy?w=24&h=24&url=' + profile().data.picture"
+          (error)="onImageLoadError()" alt="User Avatar" class="user-avatar" />
+        } @else {
+        <img [src]="profile().data.picture" (error)="onImageLoadError()" alt="User Avatar" class="user-avatar" />
+        }
+        } @else {
+        <mat-icon [ngClass]="[
+                  'default-user-avatar',
+                  isProfileNotFound() ? 'not-found-avatar' : '',
+                  imageLoadError() ? 'error-avatar' : '',
+                ]" [style.font-size]="'24px'" [style.height]="'24px'" [style.width]="'24px'">
+          {{ isProfileNotFound() ? 'no_accounts' : 'account_circle' }}
+        </mat-icon>
+        }
       </div>
+      <span class="user-profile-name name-label">
+        @if (isLoading()) {
+        Loading...
+        } @else if (profile() && !profile().isEmpty && profile().data) {
+        @if (profile().data.display_name) {
+        {{ profile().data.display_name }}
+        } @else if (profile().data.name) {
+        {{ profile().data.name }}
+        } @else {
+        {{ npubValue() }}
+        }
+        } @else {
+        {{ npubValue() }}
+        }
+      </span>
+    </a>
     }
 
     <!-- Named content projection for additional controls (like more options button) -->
