fix: Comment out unused tags section in feeds component for cleaner code

--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -356,7 +356,7 @@
                             }
 
                             <!-- Common tags section -->
-                            <div class="tags">
+                            <!-- <div class="tags">
                               @for (tag of event.tags; track $index) {
                                 @if (tag[0] === 't') {
                                   <mat-chip class="tag-chip"
@@ -364,7 +364,7 @@
                                   >
                                 }
                               }
-                            </div>
+                            </div> -->
                           <!-- </mat-card-content> -->
                           <!-- <mat-card-actions>
                             <button mat-icon-button>
