refactor: Clean up conditional statements and improve code readability in feeds component

--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -384,11 +384,13 @@
                           </mat-card-actions> -->
                         <!-- </mat-card> -->
                       }
-                    } @else {
+                    } 
+                    
+                    <!-- @else {
                       <div class="no-events">
                         <p>No events available for this feed</p>
                       </div>
-                    }
+                    } -->
                   </div>
                 }
               </div>
