--- a/src/app/pages/profile/following/following.component.html
+++ b/src/app/pages/profile/following/following.component.html
@@ -1,72 +1,59 @@
 <div class="following-container" @slideInOut #followingContainer>
   <div class="following-header" @profileShrink>
-    <button
-      mat-icon-button
-      class="back-button"
-      (click)="goBack()"
-      aria-label="Back"
-    >
+    <button mat-icon-button class="back-button" (click)="goBack()" aria-label="Back">
       <mat-icon>arrow_back</mat-icon>
     </button>
 
     <div class="profile-mini">
       @if (userProfile(); as profile) {
-        <div class="profile-mini-avatar">
-          @if (profile.picture) {
-            <img [src]="profile.picture" alt="Profile picture" />
-          } @else {
-            <mat-icon>account_circle</mat-icon>
-          }
-        </div>
-        <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
+      <div class="profile-mini-avatar">
+        @if (profile.picture) {
+        <img [src]="profile.picture" alt="Profile picture" />
+        } @else {
+        <mat-icon>account_circle</mat-icon>
+        }
+      </div>
+      <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
       } @else {
-        <div class="profile-mini-avatar">
-          <mat-icon>account_circle</mat-icon>
-        </div>
-        <h1 class="profile-mini-name">Following</h1>
+      <div class="profile-mini-avatar">
+        <mat-icon>account_circle</mat-icon>
+      </div>
+      <h1 class="profile-mini-name">Following</h1>
       }
     </div>
   </div>
 
-  <mat-tab-group
-    class="following-tabs"
-    [selectedIndex]="selectedTabIndex()"
-    (selectedIndexChange)="onTabChanged($event)"
-    animationDuration="300ms"
-  >
+  <mat-tab-group class="following-tabs" [selectedIndex]="selectedTabIndex()"
+    (selectedIndexChange)="onTabChanged($event)" animationDuration="300ms">
     <mat-tab class="following-tab" label="Connections">
       <div class="following-content">
         @if (isLoading()) {
-          <div class="loading-container">
-            <mat-spinner diameter="40"></mat-spinner>
-            <p>Loading following list...</p>
-          </div>
+        <div class="loading-container">
+          <mat-spinner diameter="40"></mat-spinner>
+          <p>Loading following list...</p>
+        </div>
         } @else if (error()) {
-          <div class="error-container">
-            <mat-icon>error</mat-icon>
-            <p>{{ error() }}</p>
-            <button mat-button color="primary">
-              <mat-icon>refresh</mat-icon> Try Again
-            </button>
-          </div>
+        <div class="error-container">
+          <mat-icon>error</mat-icon>
+          <p>{{ error() }}</p>
+          <button mat-button color="primary">
+            <mat-icon>refresh</mat-icon> Try Again
+          </button>
+        </div>
         } @else if (followingList().length === 0) {
-          <div class="empty-list">
-            <mat-icon>people_outline</mat-icon>
-            <p>This user is not following anyone.</p>
-          </div>
+        <div class="empty-list">
+          <mat-icon>people_outline</mat-icon>
+          <p>This user is not following anyone.</p>
+        </div>
         } @else {
-          <cdk-virtual-scroll-viewport
-            class="virtual-scroll-viewport"
-            [itemSize]="itemSize"
-            [minBufferPx]="minBufferPx"
-            [maxBufferPx]="maxBufferPx"
-          >
-            <mat-list class="full-width-list">
-              @for (user of followingList(); track user.id) {
-                <app-user-profile [pubkey]="user.npub"></app-user-profile>
-              }
-            </mat-list>
-          </cdk-virtual-scroll-viewport>
+        <cdk-virtual-scroll-viewport class="virtual-scroll-viewport" [itemSize]="itemSize" [minBufferPx]="minBufferPx"
+          [maxBufferPx]="maxBufferPx">
+          <mat-list class="full-width-list">
+            @for (user of followingList(); track user.id) {
+            <app-user-profile [pubkey]="user.npub"></app-user-profile>
+            }
+          </mat-list>
+        </cdk-virtual-scroll-viewport>
         }
       </div>
     </mat-tab>
@@ -74,43 +61,19 @@
     <mat-tab class="following-tab" label="Mutual Connections">
       <div class="following-content">
         @if (mutualConnectionsList().length === 0) {
-          <div class="empty-list">
-            <mat-icon>people_alt</mat-icon>
-            <p>No mutual connections found.</p>
-          </div>
+        <div class="empty-list">
+          <mat-icon>people_alt</mat-icon>
+          <p>No mutual connections found.</p>
+        </div>
         } @else {
-          <cdk-virtual-scroll-viewport
-            class="virtual-scroll-viewport"
-            [itemSize]="itemSize"
-            [minBufferPx]="minBufferPx"
-            [maxBufferPx]="maxBufferPx"
-          >
-            <mat-list>
-              @for (user of mutualConnectionsList(); track user.id) {
-                <mat-list-item
-                  class="following-item"
-                  (click)="layout.navigateToProfile(user.npub)"
-                >
-                  <div class="following-item-avatar" matListItemAvatar>
-                    @if (user.picture) {
-                      <img
-                        [src]="user.picture"
-                        alt="{{ user.name }}'s profile picture"
-                      />
-                    } @else {
-                      <mat-icon class="default-user-avatar"
-                        >account_circle</mat-icon
-                      >
-                    }
-                  </div>
-                  <div matListItemTitle>{{ user.name }}</div>
-                  <div matListItemLine class="following-item-npub">
-                    {{ user.npub }}
-                  </div>
-                </mat-list-item>
-              }
-            </mat-list>
-          </cdk-virtual-scroll-viewport>
+        <cdk-virtual-scroll-viewport class="virtual-scroll-viewport" [itemSize]="itemSize" [minBufferPx]="minBufferPx"
+          [maxBufferPx]="maxBufferPx">
+          <mat-list class="full-width-list">
+            @for (user of mutualConnectionsList(); track user.id) {
+            <app-user-profile [pubkey]="user.npub"></app-user-profile>
+            }
+          </mat-list>
+        </cdk-virtual-scroll-viewport>
         }
       </div>
     </mat-tab>
