--- a/src/app/pages/settings/general/general.component.html
+++ b/src/app/pages/settings/general/general.component.html
@@ -3,10 +3,7 @@
 
   <div class="setting-item">
     <span i18n="@@settings.dark-mode">Dark Mode</span>
-    <mat-slide-toggle
-      [checked]="themeService.darkMode()"
-      (change)="toggleDarkMode()"
-    >
+    <mat-slide-toggle [checked]="themeService.darkMode()" (change)="toggleDarkMode()">
     </mat-slide-toggle>
   </div>
 
@@ -16,17 +13,15 @@
 
     <mat-form-field appearance="outline" class="full-width">
       <mat-label i18n="@@settings.language.label">Language</mat-label>
-      <mat-select
-        [ngModel]="localSettings.locale()"
-        (selectionChange)="setLanguage($event.value)"
-      >
+      <mat-select [ngModel]="localSettings.locale()" (selectionChange)="setLanguage($event.value)">
         @for (language of languages; track language.code) {
-          <mat-option [value]="language.code">{{ language.name }}</mat-option>
+        <mat-option [value]="language.code">{{ language.name }}</mat-option>
         }
       </mat-select>
     </mat-form-field>
   </div>
 
+  @if (accountState.premium()) {
   <div>
     <h2 i18n="@@settings.release-channel">
       Release Channel <mat-icon class="minor-icon">diamond</mat-icon>
@@ -37,22 +32,14 @@
 
     <mat-form-field appearance="outline" class="full-width">
       <mat-label i18n="@@settings.feature-level">Feature Level</mat-label>
-      <mat-select
-        [ngModel]="currentFeatureLevel()"
-        (selectionChange)="setFeatureLevel($event.value)"
-      >
-        <mat-option value="stable" i18n="@@settings.feature-level.stable"
-          >Stable</mat-option
-        >
-        <mat-option value="beta" i18n="@@settings.feature-level.beta"
-          >Beta</mat-option
-        >
-        <mat-option value="preview" i18n="@@settings.feature-level.preview"
-          >Preview</mat-option
-        >
+      <mat-select [ngModel]="currentFeatureLevel()" (selectionChange)="setFeatureLevel($event.value)">
+        <mat-option value="stable" i18n="@@settings.feature-level.stable">Stable</mat-option>
+        <mat-option value="beta" i18n="@@settings.feature-level.beta">Beta</mat-option>
+        <mat-option value="preview" i18n="@@settings.feature-level.preview">Preview</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
+  }
 
   <div>
     <h2 i18n="@@settings.logging">Logging</h2>
@@ -62,10 +49,7 @@
 
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Log Level</mat-label>
-      <mat-select
-        [ngModel]="logger.logLevel"
-        (selectionChange)="setLogLevel($event.value)"
-      >
+      <mat-select [ngModel]="logger.logLevel" (selectionChange)="setLogLevel($event.value)">
         <mat-option value="debug">Debug</mat-option>
         <mat-option value="info">Info</mat-option>
         <mat-option value="warn">Warning</mat-option>
@@ -75,21 +59,21 @@
     </mat-form-field>
     <p>
       @switch (logger.logLevel) {
-        @case ('debug') {
-          Shows all log messages including detailed debug information.
-        }
-        @case ('info') {
-          Shows informational messages, warnings and errors.
-        }
-        @case ('warn') {
-          Shows only warnings and errors.
-        }
-        @case ('error') {
-          Shows only error messages.
-        }
-        @case ('none') {
-          Disables all logging output.
-        }
+      @case ('debug') {
+      Shows all log messages including detailed debug information.
+      }
+      @case ('info') {
+      Shows informational messages, warnings and errors.
+      }
+      @case ('warn') {
+      Shows only warnings and errors.
+      }
+      @case ('error') {
+      Shows only error messages.
+      }
+      @case ('none') {
+      Disables all logging output.
+      }
       }
     </p>
   </div>
