--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -164,14 +164,10 @@
       }
 
       @if (!compact() && profile()?.data.website) {
-        <div class="profile-item" title="{{ profile()!.data.website }}">
-          <mat-icon>link</mat-icon>
-          <span
-            ><a [href]="profile()!.data.website" target="_blank" rel="noopener noreferrer">{{
-              profile()!.data.website
-            }}</a></span
-          >
-        </div>
+          <div class="profile-item" title="{{ websiteUrl() }}">
+        <mat-icon>link</mat-icon>
+        <span><a [href]="websiteUrl()" target="_blank" rel="noopener noreferrer">{{ profile()!.data.website }}</a></span>
+      </div>
       }
 
       @if (!compact() && profile()?.data.about) {
