fix: make replies available for kind:1 events only
For others there will be NIP-22 comments (done separately)

--- a/src/app/components/event/reply-button/reply-button.component.html
+++ b/src/app/components/event/reply-button/reply-button.component.html
@@ -1,7 +1,7 @@
-<button mat-icon-button (click)="onClick()">
-  @if (isLongFormArticle()) {
-    <mat-icon matTooltip="Comment" matTooltipPosition="below">comment</mat-icon>
-  } @else {
+<button mat-icon-button (click)="onClick()" [disabled]="!isReply()">
+  @if (isReply()) {
     <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
+  } @else {
+    <mat-icon matTooltip="Comment" matTooltipPosition="below">comment</mat-icon>
   }
 </button>
