--- a/src/app/components/event-types/article-event.component.html
+++ b/src/app/components/event-types/article-event.component.html
@@ -8,12 +8,14 @@
 <article class="article-container">
   @if (title()) {
     <h3 class="article-title">
-      <app-user-profile
-        class="user-profile-name-right"
-        [hostWidthAuto]="true"
-        [pubkey]="event().pubkey"
-        view="tiny"
-      ></app-user-profile>
+      @if (showAuthor()) {
+        <app-user-profile
+          class="user-profile-name-right"
+          [hostWidthAuto]="true"
+          [pubkey]="event().pubkey"
+          view="tiny"
+        ></app-user-profile>
+      }
 
       {{ title() }}
     </h3>
