fix: change play button style to flat for better UI consistency

--- a/src/app/components/event-types/playlist-event.component.html
+++ b/src/app/components/event-types/playlist-event.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="playlist-actions">
-      <button mat-raised-button color="primary" (click)="playPlaylist(playlist)">
+      <button mat-flat-button color="primary" (click)="playPlaylist(playlist)">
         <mat-icon>play_arrow</mat-icon>
         Play Playlist
       </button>
