feat: add credits section to About page for investor acknowledgment

--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -46,12 +46,8 @@
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
         <li>
-          <a
-            href="https://github.com/nostria-app/nostria/releases"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Downloads</a
-          >
+          <a href="https://github.com/nostria-app/nostria/releases" target="_blank"
+            rel="noopener noreferrer">Downloads</a>
         </li>
       </ul>
 
@@ -59,21 +55,32 @@
       <p>Visit our website for more information, documentation, and support.</p>
       <ul>
         <li>
-          <a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer"
-            >Nostria Website</a
-          >
+          <a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a>
         </li>
       </ul>
+
+      <div class="credits-section">
+        <h3>Credits & Acknowledgments</h3>
+        <p>
+          We would like to extend our heartfelt gratitude to our investors who have made Nostria possible:
+        </p>
+        <mat-list>
+          <mat-list-item>
+            <mat-icon>person</mat-icon>
+            Dan Gershony
+          </mat-list-item>
+        </mat-list>
+        <p>
+          Thank you for believing in our vision of making the Nostr protocol accessible to everyone
+          and supporting the development of a truly decentralized social network.
+        </p>
+      </div>
 
       <div class="links-section">
         <h3>Useful Links</h3>
         <mat-list>
           <mat-list-item>
-            <a
-              href="https://github.com/nostria-app/nostria"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a href="https://github.com/nostria-app/nostria" target="_blank" rel="noopener noreferrer">
               <mat-icon>code</mat-icon>
               GitHub Repository
             </a>
@@ -85,11 +92,7 @@
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a
-              href="https://github.com/nostria-app/nostria/issues"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a href="https://github.com/nostria-app/nostria/issues" target="_blank" rel="noopener noreferrer">
               <mat-icon>bug_report</mat-icon>
               Report Issues
             </a>
