--- a/src/app/pages/settings/about/about.component.scss
+++ b/src/app/pages/settings/about/about.component.scss
@@ -1,3 +1,12 @@
+.credits-section {
+  margin-top: 1rem;
+}
+
+.credits-section h3 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+
 .links-section {
   margin-top: 1rem;
 }
