--- a/src/app/components/event/header/header.component.html
+++ b/src/app/components/event/header/header.component.html
@@ -49,7 +49,7 @@
           Delete Event
         </button>
       }
-      <button mat-menu-item (click)="publishEvent()">
+      <button mat-menu-item (click)="layout.publishEvent(event())">
         <mat-icon>publish</mat-icon>
         Publish Event
       </button>
