--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -69,6 +69,10 @@
             <mat-icon>person</mat-icon>
             Dan Gershony
           </mat-list-item>
+          <mat-list-item>
+            <mat-icon>person</mat-icon>
+            Nikita Korikov
+          </mat-list-item>
         </mat-list>
         <p>
           Thank you for believing in our vision of making the Nostr protocol accessible to everyone
