feat: update event component structure and improve layout for better readability

--- a/src/app/components/event-types/article-event.component.html
+++ b/src/app/components/event-types/article-event.component.html
@@ -8,15 +8,14 @@
 <article class="article-container">
   @if (title()) {
     <h3 class="article-title">
-      @if (showAuthor()) {
+      <!-- @if (showAuthor()) {
         <app-user-profile
           class="user-profile-name-right"
           [hostWidthAuto]="true"
           [pubkey]="event().pubkey"
           view="tiny"
         ></app-user-profile>
-      }
-
+      } -->
       {{ title() }}
     </h3>
   }
